# set-game

./: PROJECT_PLAN.md  card_generator.ipynb
backend/: pyproject.toml
backend/app/: game_logic.py  game_manager.py  main.py
backend/tests/: test_api.py  test_game_logic.py  test_game_manager.py  test_lobby.py
